--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "10_project_biryani-shop",
+  "name": "coffee-cafe",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://panchalchetan618.github.io/coffee-cafe",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "gh-pages": "^6.3.0",
     "motion": "^12.23.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
