--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "gsap": "^3.13.0",
     "motion": "^12.23.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
